@@ -1217,6 +1217,7 @@ static int copyEntry(const indexEntry entry, HE_t he, int minMem)
 	    entryInfo pe = (entryInfo) (ei + 2);
 	    /*@=castexpose@*/
 	    unsigned char * dataStart = (unsigned char *) (pe + ntohl(ei[0]));
+	    unsigned char * dataEnd;
 	    uint32_t rdl;
 	    uint32_t ril;
 
@@ -1243,11 +1244,14 @@ assert(entry->info.offset <= 0);		/* XXX insurance */
 	    /*@=castexpose@*/
 
 	    dataStart = (unsigned char *) memcpy(pe + ril, dataStart, rdl);
+	    dataEnd = dataStart + rdl;
 	    /*@=sizeoftype@*/
 
-	    rdlen = regionSwab(NULL, ril, 0, pe, dataStart, NULL, 0);
+	    rdlen = regionSwab(NULL, ril, 0, pe, dataStart, dataEnd, 0);
 	    /* XXX 1 on success. */
 	    rc = (rdlen == 0) ? 0 : 1;
+	    if (rc == 0)
+		he->p.ptr = _free(he->p.ptr);
 	} else {
 	    count = entry->length;
 	    he->p.ptr = (!minMem
@@ -2055,6 +2059,7 @@ int headerGet(Header h, HE_t he, unsigned int flags)
     if (!((rc == 0 && he->freeData == 0 && he->p.ptr == NULL) ||
 	  (rc == 1 && he->freeData == 1 && he->p.ptr != NULL)))
     {
+if (_hdr_debug)
 fprintf(stderr, "==> %s(%u) %u %p[%u] free %u rc %d\n", name, (unsigned) he->tag, (unsigned) he->t, he->p.ptr, (unsigned) he->c, he->freeData, rc);
     }
 /*@=modfilesys@*/
