@@ -222,6 +222,7 @@ rpmtime_t rpmswInit(void)
 	rpmsw_type = 1;
 
 	/* Compute cycles/usec */
+	if (sum_usecs > 0)	/* XXX insure that time has passed. */
 	rpmsw_cycles = sum_cycles/sum_usecs;
 #else
 	rpmsw_type = 0;
